--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.2",
-    "fs-extra": "^4.0.2",
+    "fs-extra": "^7.0.1",
     "http-shutdown": "^1.2.0",
     "morgan": "^1.8.1",
     "node-cleanup": "^2.1.2",
@@ -33,22 +33,23 @@
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
-    "@types/jest": "^21.1.8",
+    "@types/jest": "^24.0.12",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^8.0.53",
-    "awesome-typescript-loader": "^3.1.3",
-    "is-ci": "^1.0.10",
-    "jest": "^21.2.1",
-    "jest-html-reporter": "^0.5.1",
-    "jest-junit": "^3.3.0",
+    "@types/node": "^11.13.8",
+    "awesome-typescript-loader": "^5.2.1",
+    "is-ci": "^2.0.0",
+    "jest": "^24.7.1",
+    "jest-html-reporter": "^2.5.0",
+    "jest-junit": "^6.3.0",
     "node-mocks-http": "^1.6.4",
     "nodemon": "^1.11.0",
-    "request-promise-lite": "^0.12.0",
-    "ts-jest": "^21.2.3",
-    "ts-node": "^3.3.0",
+    "request-promise-lite": "^0.15.0",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0",
     "tslint": "^5.2.0",
-    "typescript": "^2.6.1",
-    "webpack": "^3.8.1",
+    "typescript": "^3.4.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
     "webpack-node-externals": "^1.6.0"
   },
   "engines": {
